# ParallelSortOpenCL

./: BitonicSort.cl  CMakeLists.txt  main.cpp
